changes to homepage and styling, extra whitespace bug fixed

--- a/midterm-website/static/css/color.css
+++ b/midterm-website/static/css/color.css
@@ -11,3 +11,7 @@ body {
 hr {
   color: red;
 }
+
+.linkstyling {
+  color: white;
+}
